<resources>
    <string name="app_name">Film Festival</string>
    <string name="content_authority">nl.pindab0ter.edinburghinternationalfilmfestival</string>
    <string name="edinburgh_festival_city_base_url" translatable="false">https://api.edinburghfestivalcity.com</string>
    <string name="edinburgh_festival_city_base_path" translatable="false">events</string>
    <string name="edinburgh_festival_city_api_key_key" translatable="false">key</string>
    <string name="edinburgh_festival_city_signing_key" translatable="false">signature</string>
    <string name="edinburgh_festival_city_festival_key" translatable="false">festival</string>
    <string name="edinburgh_festival_city_festival_value" translatable="false">film</string>
    <string name="edinburgh_festival_city_year_key">year</string>
    <string name="edinburgh_festival_city_year_value">2015</string>
    <string name="crypto_algorithm" translatable="false">HmacSHA1</string>
    <string name="film_image_description">Film poster</string>
    <string name="sort_alphabetically_ascending">Alphabetically (ascending)</string>
    <string name="sort_alphabetically_descending">Alphabetically (descending)</string>
    <string name="sort_first_performance_date_ascending">First performance (ascending)</string>
    <string name="sort_first_performance_date_descending">First performance (descending)</string>
    <string name="sort_label">Sort</string>
    <string name="filter_none">All</string>
    <string name="description_label">Description</string>
    <string name="failed_to_load_genres">Failed to load genres</string>
    <string name="rate_and_share_title">Rate and share</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="rate_and_share_message">Your rating for %1$s:</string>
    <string name="this_event">this event</string>
    <string name="share_text_with_rating">Hi, I rated \"%1$s\" %2$s.\nFind out more here:\n%3$s</string>
    <string name="failed_to_load_events">Failed to load events</string>
    <string name="try_again">Try again</string>
    <string name="add_to_schedule">Add</string>
    <string name="remove_from_schedule">Added</string>
    <string name="film_description_placeholder">Go inside teenager Riley\'s head and meet her emotions: Joy, Sadness, Fear, Anger and Disgust. Riley is struggling to adjust after being uprooted to a new life in San Francisco. When Sadness accidentally gets herself and Joy lost inside the depths of Riley\'s mind, an emotional rollercoaster ensues. Can Joy and Sadness find their way back and restore order to Riley\'s emotional state? This latest film from the animation genius of Disney•Pixar will charm and delight audiences of all ages.</string>
    <string name="film_title_placeholder">Inside Out</string>
    <string name="film_date_long_placeholder">Wo, 28 jan. 2015 13:55</string>
    <string name="film_venue_name_placeholder">Cineworld</string>
    <string name="film_venue_address_placeholder">130/3 Dundee Street, Edinburgh</string>
    <string name="venue_label">Venue</string>
    <string name="nav_overview">Overview</string>
    <string name="nav_schedule">Schedule</string>
</resources>
