<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_label"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_title_ascending"
                android:title="@string/sort_alphabetically_ascending" />
            <item
                android:id="@+id/sort_title_descending"
                android:title="@string/sort_alphabetically_descending" />
            <item
                android:id="@+id/sort_date_ascending"
                android:title="@string/sort_first_performance_date_ascending" />
            <item
                android:id="@+id/sort_date_descending"
                android:title="@string/sort_first_performance_date_descending" />
        </menu>
    </item>
</menu>