<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="78dp"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:theme="@style/AppTheme.Overlay.FilmEventList">

    <ImageView
        android:id="@+id/iv_film_event_list_image"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/text_margin"
        android:contentDescription="@string/film_image_description"
        android:paddingTop="4dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/film_poster" />

    <TextView
        android:id="@+id/tv_film_event_list_item_title"
        style="@style/AppTheme.TextAppearance.ListHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="4dp"
        android:layout_toEndOf="@id/iv_film_event_list_image"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLines="1"
        tools:text="@string/film_title_placeholder" />

    <TextView
        android:id="@+id/tv_film_event_list_description"
        style="@style/AppTheme.TextAppearance.Detail"
        android:layout_width="wrap_content"
        android:paddingTop="2dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/tv_film_event_list_item_title"
        android:layout_toEndOf="@id/iv_film_event_list_image"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:lineSpacingMultiplier="0.95"
        android:maxLines="3"
        tools:text="@string/film_description_placeholder" />
</RelativeLayout>